<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data />

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:orientation="horizontal"
            tools:context=".CategoryFragment">

            <TextView
                android:id="@+id/tv_category1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/popular"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tv_category2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:text="@string/hot"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tv_category3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:text="@string/recommend"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tv_category4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:text="@string/special"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tv_category5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:text="@string/sport"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tv_category6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:text="@string/world"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tv_category7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:text="@string/economy"
                android:textSize="18sp" />

        </LinearLayout>
    </HorizontalScrollView>
</layout>